Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2.7
-
None
-
Fedora 25 x86_64
Description
https://mariadb.com/kb/en/mariadb/server-system-variables/#back_log
besides that the value is completly ignored - from where comes the 110 when the docs say it would be the same as "max_connections" which is on 300?
max_connections = 300
|
back_log = 1000
|
MariaDB [(none)]> show GLOBAL variables like 'back_log'; |
+---------------+-------+ |
| Variable_name | Value |
|
+---------------+-------+ |
| back_log | 110 |
|
+---------------+-------+ |
1 row in set (0.00 sec) |
Default Value:
The lower of 150 or the value of max_connections (>= MariaDB 10.0.8)
50 (<= MariaDB 10.0.8)
see also https://bugs.php.net/bug.php?id=74971 - the "HY000/2002): Resource temporarily unavailable" needs to go away because the machine itself is far away from overload when it respons within 0.003 seconds on additional requests from the browser due benchmarks are running